refactored using autorefactor