@@ -1,20 +1,15 @@
-//
 //  ========================================================================
 //  Copyright (c) 1995-2016 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
 //  and Apache License v2.0 which accompanies this distribution.
-//
 //      The Eclipse Public License is available at
 //      http://www.eclipse.org/legal/epl-v10.html
-//
 //      The Apache License v2.0 is available at
 //      http://www.opensource.org/licenses/apache2.0.php
-//
 //  You may elect to redistribute this code under either of these licenses.
 //  ========================================================================
-//
 
 package org.eclipse.jetty.plus.webapp;
 
@@ -36,7 +31,7 @@ import org.eclipse.jetty.webapp.WebAppContext;
 /**
  * Configuration
  *
- *
+ *.
  */
 public class PlusConfiguration extends AbstractConfiguration
 {
@@ -106,7 +101,7 @@ public class PlusConfiguration extends AbstractConfiguration
         try
         {
             Random random = new Random ();
-            _key = new Integer(random.nextInt());
+            _key = Integer.valueOf(random.nextInt());
             Context context = new InitialContext();
             Context compCtx = (Context)context.lookup("java:comp");
             compCtx.addToEnvironment("org.eclipse.jetty.jndi.lock", _key);
