@@ -1,20 +1,15 @@
-//
 //  ========================================================================
 //  Copyright (c) 1995-2016 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
 //  and Apache License v2.0 which accompanies this distribution.
-//
 //      The Eclipse Public License is available at
 //      http://www.eclipse.org/legal/epl-v10.html
-//
 //      The Apache License v2.0 is available at
 //      http://www.opensource.org/licenses/apache2.0.php
-//
 //  You may elect to redistribute this code under either of these licenses.
 //  ========================================================================
-//
 
 package org.eclipse.jetty.server.session;
 
@@ -117,8 +112,8 @@ public class HashSessionManagerTest
         HashedSession session = (HashedSession)manager.newHttpSession(new Request(null, null));
         String sessionId = session.getId();
         
-        session.setAttribute("one", new Integer(1));
-        session.setAttribute("two", new Integer(2));    
+        session.setAttribute("one", Integer.valueOf(1));
+        session.setAttribute("two", Integer.valueOf(2));    
         
         //stop will persist sessions
         manager.setMaxInactiveInterval(30); // change max inactive interval for *new* sessions
