@@ -1,28 +1,20 @@
-//
 //  ========================================================================
 //  Copyright (c) 1995-2016 Mort Bay Consulting Pty. Ltd.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
 //  and Apache License v2.0 which accompanies this distribution.
-//
 //      The Eclipse Public License is available at
 //      http://www.eclipse.org/legal/epl-v10.html
-//
 //      The Apache License v2.0 is available at
 //      http://www.opensource.org/licenses/apache2.0.php
-//
 //  You may elect to redistribute this code under either of these licenses.
 //  ========================================================================
-//
 
 package org.eclipse.jetty.util.log;
 
 import java.lang.reflect.Method;
 
-/**
- *
- */
 public class LoggerLog extends AbstractLogger
 {
     private final Object _logger;
@@ -154,8 +146,9 @@ public class LoggerLog extends AbstractLogger
     
     public void debug(String msg, Object... args)
     {
-        if (!_debug)
-            return;
+        if (!_debug) {
+			return;
+		}
 
         try
         {
@@ -174,8 +167,9 @@ public class LoggerLog extends AbstractLogger
 
     public void debug(String msg, Throwable th)
     {
-        if (!_debug)
-            return;
+        if (!_debug) {
+			return;
+		}
 
         try
         {
@@ -189,12 +183,13 @@ public class LoggerLog extends AbstractLogger
 
     public void debug(String msg, long value)
     {
-        if (!_debug)
-            return;
+        if (!_debug) {
+			return;
+		}
 
         try
         {
-            _debugMAA.invoke(_logger, new Object[]{new Long(value)});
+            _debugMAA.invoke(_logger, new Object[]{Long.valueOf(value)});
         }
         catch (Exception e)
         {
